# renhang_smartreport

./: .gitignore  DEBUG_GUIDE.md  DEVELOPMENT_TASKS.md  LLM_OUTPUT_FORMAT_GUIDE.md  MIGRATION_COMPLETE.md  MINERU_INTEGRATION.md  OPENROUTER_API_GUIDE.md  OPENROUTER_IMAGE_SETUP.md  PDF_PROCESSING_MIGRATION_GUIDE.md  PROJECT_UNDERSTANDING.md  PROMPTS_REFERENCE.md  README.md  SAFARI.md  STORAGE_ARCHITECTURE.md  TEST_REPORT_2026_03_29.md  frontend-example-async-translation.js  frontend-example-document-translation.js
backend/: .env.example  .gitignore  IMPLEMENTATION_REPORT.md  PROGRESS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  STRUCTURE_TREE.txt  alembic.ini  main.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py  script.py.mako
backend/api/: dependencies.py
backend/configs/: README_COUNTRY_RESEARCH.md  __init__.py  countries_config_example.json  country_data_sources.py  country_data_sources_example.py  country_report_data_sources.py
backend/core/: config.py  constants.py  database.py  redis.py  security.py
backend/models/: __init__.py  base.py  document.py  document_translation.py  image_translation.py  official_document.py  tag.py  task.py  user.py
backend/schemas/: __init__.py  common.py  document.py  document_translation.py  image_translation.py  official_document.py  task.py  user.py
backend/scripts/: init_db.py
backend/services/: __init__.py  academic_to_official_service.py  country_research_service.py  document_service.py  document_translation_service.py  file_service.py  fitz_extractor.py  image_translation_service.py  (+5 more)
(+69 files in other folders)
